<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">OpintoKalenteri</string>
    <string name="Login_titletext">LOGIN</string>
    <string name="Login_usertext">Username</string>
    <string name="Login_passtext">Password</string>
    <string name="Login_buttontext">Login</string>
    <string name="Login_failedtext">Login failed.</string>
    <string name="Login_newuser">Create a new user</string>
    <string name="Createuser_title">Create new user</string>
    <string name="Createuser_retype">Retype password</string>
    <string name="Createuser_button">Create</string>
    <string name="Createuser_info"/>
    <string name="Createuser_failed">Passwords do not match!</string>
    <string name="Createuser_success">User successfully created!</string>
    <string name="Main_points">pointsit</string>
    <string name="Main_title">MAIN MENU</string>
    <string name="Main_manageCourses">Omien kurssien hallinta</string>
    <string name="Main_listTitle">Tämänhetkiset kurssit:</string>
    <string name="AdminMain_title">ADMIN SCREEN</string>
    <string name="AdminMain_manageCourses">Add Course</string>
    <string name="Createcourse_title">CREATE COURSE</string>
    <string name="CreateCourse_NameText">Course Name</string>
    <string name="CreateCourse_PointsText">Course Points</string>
    <string name="CreateCourse_button">Create</string>
    <string name="adminCheckBox">Admin</string>
    <string name="loggedAs">Logged as:</string>
    <string name="AdminMain_acceptCourse">Accept course</string>
    <string name="Managecourses_spinnerPrompt">Valitse kurssi</string>
    <string-array name="kurssit_array">
        <item>Kurssi1</item>
        <item>Kurssi2</item>
        <item>Kurssi3</item>
    </string-array>
    <string name="Managecourses_enrollText">Ilmoittaudu</string>
    <string name="Managecourses_titleText">Ilmoittaudu kurssille:</string>
    <string name="Managecourses_listTitleText">Peru ilmoittautuminen:</string>

</resources>