<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Createuser_headView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Createuser_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/Createuser_usernameView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_usertext" />

    <EditText
        android:id="@+id/Createuser_usernameEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Createuser_passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_passtext" />

    <EditText
        android:id="@+id/Createuser_passwordEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/Createuser_retypeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Createuser_retype" />

    <EditText
        android:id="@+id/Createuser_retypeEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/Createuser_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/Createuser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Createuser_button"
        android:layout_gravity="center" />

</LinearLayout>