<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
 <TextView
        android:id="@+id/loggedAsAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loggedAs"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    
<TextView
        android:id="@+id/AdminMain_headView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdminMain_title"
        android:textSize="@dimen/Main_head"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/AdminMain_manageCoursesButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/AdminMain_manageCourses"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/Main_margin10dp"
        android:layout_marginLeft="@dimen/Main_head"
        android:layout_marginRight="@dimen/Main_head" />

    <Button
        android:id="@+id/AdminMain_acceptCourseButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/AdminMain_acceptCourse"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/Main_margin10dp"
        android:layout_marginLeft="@dimen/Main_head"
        android:layout_marginRight="@dimen/Main_head" />

    <TextView
        android:id="@+id/AdminMain_listTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_listTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/Main_margin10dp" />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#9E9E9E">
    
	    <RelativeLayout
		        android:id="@+id/relativeLayout3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="3dp">

		        <TextView
		            android:id="@+id/adminmain_tableColumnName"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:textColor="#FFFFFF"
		            android:text="Course Name" />
		
		
			     <TextView
		            android:id="@+id/adminmain_tableColumnPoints"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:textColor="#FFFFFF"
		            android:text="Course Points" />

    	</RelativeLayout>
	    
	    <ListView
	        android:id="@+id/AdminMain_courseList"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_margin="4dp"
	        android:background="#FFFFFF"
	        android:layout_weight="0"
	       	android:divider="#000000"
	        android:dividerHeight="2dp" > >
	    </ListView>
	
	</LinearLayout>
    
</LinearLayout>